--- a/src/sass/views/_home.sass
+++ b/src/sass/views/_home.sass
@@ -1,22 +1,6 @@
 .content.home
-  position: absolute
-  left: 20px
-  right: 20px
-  top: 0px
-  bottom: 0px
-  overflow: hidden
-
+  width: 75%
+  margin: 0 auto
   .scroll-inner
-    position: absolute
-    left: -30px
-    right: -30px
-    top: 0px
-    bottom: 0px
-    overflow-y: scroll
-    overflow-x: hidden
 
   .discography
-    position: absolute
-    right: -30px
-    left: -30px
-    height: 100%
